// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check.spec mixin 1`] = `
[
  {
    "name": "c",
    "title": "C",
  },
  {
    "name": "a",
    "title": "A",
  },
  {
    "title": "G",
  },
  {
    "name": "b",
    "title": "B",
  },
  {
    "name": "d",
    "title": "D",
  },
  {
    "name": null,
    "title": "F",
  },
  {
    "name": "e",
    "title": "E",
  },
  null,
  undefined,
]
`;

exports[`check.spec mixin with symbol 1`] = `
[
  Symbol(),
  Symbol(Symbol.iterator),
  Symbol(Symbol.iterator),
  Symbol(iterator),
  {
    "name": "c",
    "title": "C",
  },
  {
    "name": "a",
    "title": "A",
  },
  {
    "title": "G",
  },
  {
    "name": "b",
    "title": "B",
  },
  {
    "name": "d",
    "title": "D",
  },
  {
    "name": null,
    "title": "F",
  },
  {
    "name": "e",
    "title": "E",
  },
  "a",
  "b",
  "c",
  "d",
  "e",
  "https://bafybeicm5clh7fl4up4prnbfqksou6vsp5voth54rcsxhsjysimm3o77fq.on.fleek.co/",
  null,
  null,
  undefined,
  undefined,
]
`;
